...
  route: Route;
};

const ALBUMS: { [key: string]: ImageRequireSource } = {
  'Abbey Road': require('../../assets/tabView/album-art-1.jpg'),
  'Bat Out of Hell': require('../../assets/tabView/album-art-2.jpg'),
  'Homogenic': require('../../assets/tabView/album-art-3.jpg'),
  'Number of the Beast': require('../../assets/tabView/album-art-4.jpg'),
  "It's Blitz": require('../../assets/tabView/album-art-5.jpg'),
  'The Man-Machine': require('../../assets/tabView/album-art-6.jpg'),
  'The Score': require('../../assets/tabView/album-art-7.jpg'),
  'Lost Horizons': require('../../assets/tabView/album-art-8.jpg'),
};
...
