...

const data = [
  {
    type: 'Humlan P',
    imageUri: require('../assets/urbanears_blue.png'),
    heading: 'Vibrant colors',
    description: 'Four on-trend colorways to seamlessly suit your style.',
    key: 'first',
    color: '#9dcdfa',
  },
  {
    type: 'Pampas',
    imageUri: require('../assets/urbanears_pink.png'),
...
