...
      testID={'pager-view'}
      style={styles.pagerView}
      initialPage={0}
      onPageScroll={handler}
    >
      <View testID={'1'} key="1">
        <Text>First page</Text>
      </View>
      <View testID={'2'} key="2">
        <Text>Second page</Text>
      </View>
      <View testID={'3'} key="3">
        <Text>Third page</Text>
...
