...
  None,
  Logs,
  Controls,
}

const tabs = [
  { tab: VisibleTab.Controls, label: 'Control' },
  { tab: VisibleTab.Logs, label: 'Logs' },
];

export function NavigationPanel(props: NavigationPanelProps) {
  const [visible, setVisible] = useState(VisibleTab.Controls);

...
