...
          </Text>
        </View>
      </View>
      <View style={styles.buttons}>
        <Button
          testID="start-page-button"
          text="Start"
          disabled={activePage === 0}
          onPress={firstPage}
        />
        <Button
          testID="prev-page-button"
          text="Prev"
...
