...
          collapsable={false}
        >
          <LikeCount />
        </View>
        <View key="2" collapsable={false}>
          <Text style={styles.title}>
            There has two Nest PagerView with horizontal and vertical.
          </Text>
          <AnimatedPagerView
            style={styles.PagerView}
            initialPage={0}
            layoutDirection="ltr"
            pageMargin={10}
...
