appId: ${APP_ID}
#  tc135 The CoverflowExample tab is accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- swipe:
    start: '86%,80%'
    end: '90%,30%'
    duration: 352
- tapOn: 'CoverflowExample'
- assertVisible: 'Homogenic'
