appId: org.reactjs.native.example.FabricExample
#  tc132 The Reanimated onPageScroll example tab is accessible
---
- launchApp
- assertVisible: "PagerView Example"
- swipe:
    start: "86%,80%"
    end: "90%,30%"
    duration: 352
- tapOn: "Reanimated onPageScroll example"
- assertVisible:
    text: "First page"
    index: 0