appId: ${APP_ID}
# ios: org.reactjs.native.example.FabricExample
# android: com.pagerviewexample
# tc25 User can answer to “First Question”
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Keyboard Example'
- assertVisible: 'Keyboard Example'
- assertVisible: 'Page 1 / 2 '
- tapOn:
    id: 'text-input'
- inputText: 'Angular'
- assertVisible: 'Angular'
