appId: ${APP_ID}
#  tc70 Pagination Dots Example tab is active and accessible
---
- launchApp
#- assertVisible: 'PagerView Example'
- tapOn: 'Pagination Dots Example'
- assertVisible: 'Page Index: 1'
- assertVisible: 'Expanding Dot'
