appId: com.pagerviewexample
#  tc115 The AutoWidthTabBarExample tab is accessible
---
- launchApp
- assertVisible: "PagerView Example"
- scrollUntilVisible:
    element:
      text: "AutoWidthTabBarExample"
    direction: DOWN
- tapOn: "AutoWidthTabBarExample"
- assertVisible: "Navigate up"