appId: com.pagerviewexample
#  tc126 Swiping pages is obtainable
---
- launchApp
- assertVisible: PagerView Example
- swipe:
    start: "85%,83%"
    end: "72%,44%"
    duration: 258
- tapOn:
    text: CustomIndicatorExample
    optional: true
- assertVisible: "Lorem Ipsum"
- swipe:
    start: "73%,53%"
    end: "18%,51%"
    duration: 255
- assertVisible: "Marissa Castillo"
- swipe:
    start: "86%,52%"
    end: "32%,51%"
    duration: 402
- repeat:
    times: 2
    commands:
      - swipe:
          start: "18%,53%"
          end: "90%,59%"
          duration: 384
- assertVisible: "Lorem Ipsum"
- clearState