appId: com.pagerviewexample
#  tc128 The CustomTabBarExample tab is accessible
---
- launchApp:
    appId: com.pagerviewexample
    clearState: "true"
    stopApp: "false"
- assertVisible: "PagerView Example"
# - swipe:
#     start: "85%,83%"
#     end: "72%,44%"
#     duration: 258
- scrollUntilVisible:
    element:
      text: "CustomTabBarExample"
    direction: DOWN
- tapOn:
    text: "CustomTabBarExample"
    optional: true
- assertVisible: "Marissa Castillo"