appId: com.pagerviewexample
#  tc99 Nest PagerView Example tab is active and accessible
---
- launchApp:
    appId: com.pagerviewexample
    clearState: "true"
    stopApp: "false"
- assertVisible: "PagerView Example"
- tapOn: "Nest PagerView Example"
- assertVisible: "7 likes"