appId: com.pagerviewexample
# alert dialog dismissal
---
- launchApp:
    appId: com.pagerviewexample
    clearState: "true"
    stopApp: "false"
- assertVisible: "PagerView Example"
- tapOn: "OnPageSelected Example"
- assertVisible: "You are on 1 page"
- tapOn: "OK"
- assertNotVisible: "You are on 1 page"