appId: com.pagerviewexample
#  tc109 The ScrollableTabBarExample tab is accessible
---
- launchApp
- assertVisible: "PagerView Example"
- tapOn: "ScrollableTabBarExample"
- assertVisible:
    text: "CONTACTS"
    index: 1