appId: org.reactjs.native.example.FabricExample
#  tc78 Scrollable PagerView Example tab is active and accessible
---
- launchApp:
    appId: "org.reactjs.native.example.FabricExample"
    clearState: "true"
    clearKeychain: "true"
    stopApp: "false"
- assertVisible: "PagerView Example"
- tapOn: "Scrollable PagerView Example"
- assertVisible: "Page 1 / 10 "