appId: ${APP_ID}
# alert dialog dismissal
---
- assertVisible: 'PagerView Example'
- tapOn: 'OnPageSelected Example'
- assertVisible: 'You are on 1 page'
- tapOn: 'OK'
- assertNotVisible: 'You are on 1 page'
