appId: ${APP_ID}
#  tc97 All the page elements are clickable
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'ScrollView inside PagerView Example'
- tapOn:
    text: 'Click me'
    index: 0
- tapOn:
    text: 'Click me'
    index: 1
- tapOn:
    text: 'Click me'
    index: 2
- tapOn:
    text: 'Click me'
    index: 3
- tapOn:
    text: 'Click me'
    index: 4
- tapOn:
    text: 'Click me'
    index: 5
- tapOn:
    text: 'Click me'
    index: 6
- tapOn:
    text: 'Click me'
    index: 7
- tapOn:
    text: 'Click me'
    index: 8
- tapOn:
    text: 'Click me'
    index: 9
- swipe:
    start: '84%,80%'
    end: '89%,12%'
    duration: 688
- tapOn:
    text: 'Click me'
    index: 0
- tapOn:
    text: 'Click me'
    index: 1
- tapOn:
    text: 'Click me'
    index: 2
- tapOn:
    text: 'Click me'
    index: 3
- tapOn:
    text: 'Click me'
    index: 4
- tapOn:
    text: 'Click me'
    index: 5
- tapOn:
    text: 'Click me'
    index: 6
- tapOn:
    text: 'Click me'
    index: 7
- tapOn:
    text: 'Click me'
    index: 8
- tapOn:
    text: 'Click me'
    index: 9
- swipe:
    start: '84%,80%'
    end: '89%,12%'
    duration: 688
- tapOn:
    text: Click me
    index: 10
- tapOn:
    text: Click me
    index: 11
