appId: ${APP_ID}
#  tc96 There are 20 visible elements on the page
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'ScrollView inside PagerView Example'
- assertVisible:
    text: 'CLICK ME'
    index: 0
- assertVisible:
    text: 'CLICK ME'
    index: 1
- assertVisible:
    text: 'CLICK ME'
    index: 2
- assertVisible:
    text: 'CLICK ME'
    index: 3
- assertVisible:
    text: 'CLICK ME'
    index: 4
- assertVisible:
    text: 'CLICK ME'
    index: 5
- assertVisible:
    text: 'CLICK ME'
    index: 6
- assertVisible:
    text: 'CLICK ME'
    index: 7
- assertVisible:
    text: 'CLICK ME'
    index: 8
- assertVisible:
    text: 'CLICK ME'
    index: 9
- swipe:
    start: '84%,80%'
    end: '89%,12%'
    duration: 688
- assertVisible:
    text: 'CLICK ME'
    index: 0
- assertVisible:
    text: 'CLICK ME'
    index: 1
- assertVisible:
    text: 'CLICK ME'
    index: 2
- assertVisible:
    text: 'CLICK ME'
    index: 3
- assertVisible:
    text: 'CLICK ME'
    index: 4
- assertVisible:
    text: 'CLICK ME'
    index: 5
- assertVisible:
    text: 'CLICK ME'
    index: 6
- assertVisible:
    text: 'CLICK ME'
    index: 7
- assertVisible:
    text: 'CLICK ME'
    index: 8
- assertVisible:
    text: 'CLICK ME'
    index: 9
- swipe:
    start: '84%,80%'
    end: '89%,12%'
    duration: 688
- assertVisible:
    text: 'CLICK ME'
    index: 10
- assertVisible:
    text: 'CLICK ME'
    index: 11
