appId: ${APP_ID}
#  tc78 Scrollable PagerView Example tab is active and accessible
---
- launchApp
- assertVisible: 'PagerView Example'
- tapOn: 'Scrollable PagerView Example'
- assertVisible: 'Page 1 / 10 '
