appId: com.pagerviewexample
#  tc103 Nest PagerView Example tab has 3 main pages that are accessible while the screen is swiped left
---
- runFlow: /Users/martagorecka/pager_repo/react-native-pager-view/maestro_tests/android/tc99_nest_pagerView_example.yaml
- swipe:
    start: "74%,57%"
    end: "7%,56%"
    duration: 272
- assertVisible: "There has two Nest PagerView with horizontal and vertical."
- swipe:
    start: "79%,81%"
    end: "18%,77%"
    duration: 355
- assertVisible: "7 likes"
- swipe:
    start: "15%,66%"
    end: "78%,63%"
    duration: 352
- assertVisible: "There has two Nest PagerView with horizontal and vertical."
- swipe:
    start: "21%,76%"
    end: "98%,80%"
    duration: 397
- tapOn: "Navigate up"
- assertVisible: "PagerView Example"